--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "translator",
     "language",
     "languages",
-    "language-list"
+    "language-list",
+    "BCP 47",
+    "ISO 3166-1"
   ],
   "license": "MIT"
 }
