--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,5 @@
 name: release
-on:
-  schedule:
-    - cron: "*/5 * * * *"
+on: push
 jobs:
   release:
     name: Updates languages, releases a new version if needed
