--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -28,9 +28,9 @@ jobs:
         if: ${{ steps.build.update.status == 'updated' }}
         run: |
           npm run release
-        with:
-          github_token: ${{ secrets.NPM_TOKEN }}
-          test: "test"
+        env:
+          GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
+          TEST: "test"
       # - name: Publish
       #   id: publish
       #   if: ${{ steps.build.update.status == 'updated' }}
