--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,14 +22,17 @@ jobs:
         id: update
         run: |
           npm run update
+      - name: Echo
+        id: echo
+        run: echo "The output status is ${{ steps.update.outputs.status }}"
       - name: Test
         id: test
-        if: ${{ steps.update.status == 'updated' }}
+        if: ${{ steps.update.outputs.status == 'updated' }}
         run: |
           npm run test
       - name: Release
         id: release
-        if: ${{ steps.update.status == 'updated' }}
+        if: ${{ steps.update.outputs.status == 'updated' }}
         run: |
           npm run release
         env:
