--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -37,10 +37,10 @@ jobs:
         if: ${{ steps.update.outputs.status == 'updated' }}
         run: |
           npm run release
-      # - name: Publish
-      #   id: publish
-      #   if: ${{ steps.update.status == 'updated' }}
-      #   run: |
-      #     npm publish
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Publish
+        id: publish
+        if: ${{ steps.update.status == 'updated' }}
+        run: |
+          npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
