--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,27 +14,33 @@ jobs:
         with:
           node-version: "14"
           registry-url: "https://registry.npmjs.org"
+      - name: Dependencies
+        id: dependencies
+        run: |
+          npm install
       - name: Update
         id: update
         run: |
           npm run update
       - name: Test
         id: test
-        if: ${{ steps.update.status == 'updated' }}
+        if: ${{ steps.update.outputs.status == 'updated' }}
         run: |
           npm run test
+      - name: Bump version
+        id: bump_version
+        if: ${{ steps.update.outputs.status == 'updated' }}
+        run: |
+          npm run bump_version
       - name: Release
         id: release
-        if: ${{ steps.update.status == 'updated' }}
+        if: ${{ steps.update.outputs.status == 'updated' }}
         run: |
           npm run release
+      - name: Publish
+        id: publish
+        if: ${{ steps.update.status == 'updated' }}
+        run: |
+          npm publish
         env:
-          GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
-          TEST: "test"
-      # - name: Publish
-      #   id: publish
-      #   if: ${{ steps.update.status == 'updated' }}
-      #   run: |
-      #     npm publish
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
