--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -39,7 +39,7 @@ jobs:
           npm run release
       - name: Publish
         id: publish
-        if: ${{ steps.update.status == 'updated' }}
+        if: ${{ steps.update.outputs.status == 'updated' }}
         run: |
           npm publish
         env:
